# pico-usb-driver

./: README.md  vídeo.txt
device/: CMakeLists.txt  main.c  usb_descriptors.c
device/include/: tusb_config.h
driver/: .pico_usb.ko.cmd  .pico_usb.mod.o.cmd  .pico_usb.o.cmd  Makefile  pico_usb.c  pico_usb.ko  pico_usb.mod.c
user_app/: pico_userapp  pico_userapp.c
